test/pass/require_depending.sest
require "require_depended.sest"

module RequireDepending = struct

  let main(args) =
    print_debug(RequireDepended.hello())

end
