test/fail/error_cyclic/error_cyclic_foo.sest
require "./error_cyclic_bar.sest"

module ErrorCyclicFoo = struct
  let main() = ()
end
